deleteWebsiteWithRMQ
