# controllers/website.js
@@ -1,4 +1,6 @@
 import Website from '../models/website.js';
+import logger from '../logger.js';
+import sendToRabbitMQ from '../rabbitMQ/send_message.js';
 
 export const getAllWebsites = (req, res) => {
   /*
@@ -25,5 +27,33 @@ export const addWebsite = async (req, res) => {
     res.status(200).send(website);
   } catch (err) {
     res.status(404).send(err);
+  }
+};
+export const deleteWebsit = async (req, res) => {
+  /*
+#swagger.tags=['Website']
+*/
+  /*
+#swagger.parameters['id'] = {
+         in: 'path',
+              required: true,
+          schema: { $ref: "#/definitions/deleteWebsite" }
+      }
+  */
+  const webId = req.params.id;
+  logger.info(webId);
+  try {
+    const website = await Website.findById(webId);
+    if (website.status !== 'Deleted') {
+      website.status = 'About to be deleted';
+      await website.save();
+      sendToRabbitMQ(webId, 'deleteWebsit');
+      return res.status(200).send(website);
+    }
+    if (!website) return res.status(404).json({ message: `Website with id ${webId} not found` });
+    return res.status(400).send({ message: 'This website is already deleted' });
+  } catch (error) {
+    logger.error(error);
+    return res.status(500).json(error.message);
   }
 };
