# swagger_output.json
@@ -69,6 +69,39 @@
         }
       }
     },
+    "/website/{id}": {
+      "delete": {
+        "tags": [
+          "Website"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "schema": {
+              "$ref": "#/definitions/deleteWebsite"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/backup/": {
       "get": {
         "tags": [
@@ -109,6 +142,24 @@
           }
         }
       }
+    },
+    "/backup/{id}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -145,8 +196,8 @@
           "example": 673
         },
         "status": {
-          "type": "number",
-          "example": 10
+          "type": "string",
+          "example": "Active"
         }
       }
     },
@@ -183,8 +234,8 @@
           "example": 673
         },
         "status": {
-          "type": "number",
-          "example": 10
+          "type": "string",
+          "example": "Active"
         }
       },
       "required": [
@@ -195,6 +246,18 @@
         "cpu",
         "memory",
         "status"
+      ]
+    },
+    "deleteWebsite": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "6476fafd31fe80568d17ccb5"
+        }
+      },
+      "required": [
+        "_id"
       ]
     },
     "Backup": {
